# Eigen_Boost_OpenMPI_GoogleTests_Examples

./: CMakeLists.txt  README.md
extern_libs/Eigen/share/pkgconfig/: eigen3.pc
modules_cmake/: Boost.cmake  CMakeCommon.cmake  OpenMPI.cmake  Python.cmake
src/: CMakeLists.txt
src/boost/: CMakeLists.txt  matmul_boost.cpp
src/cpp/: CMakeLists.txt  MUtil.h  strassen_mat_mul.cpp
src/eigen/: CMakeLists.txt  matmul_eigen.cpp  strassen_mat_mul_eigen.cpp
test/: CMakeLists.txt
